<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Digital Wallet</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_product">Add Item</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="title_activity_remove_item">RemoveItem</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_history">Expense History</string>
    <string name="title_activity_show_item">Show Expense</string>

    <string-array name="PaymentOption">
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Cheque</item>
        <item>Different</item>
    </string-array>
    <string-array name="ProductCategory">
        <item>Fashion</item>
        <item>Home &amp; Decor</item>
        <item>Outdoors</item>
        <item>Electronics</item>
        <item>Sporting Goods</item>
        <item>Motors</item>
        <item>Art &amp; Collectibles</item>
        <item>Different</item>
    </string-array>

    <string name="product_category">Product Category</string>
    <string name="title_activity_pie_chart_example">PieChartExample</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="photo_location">Photo location</string>
    <string name="title_activity_record_audio">RecordAudio</string>
    <string name="title_activity_add_income">AddIncome</string>
    <string name="choose_income_type">Choose Income Type</string>

    <string-array name="income_type">
        <item>Salary</item>
        <item>Money Transfer</item>
        <item>Tax Refund</item>
        <item>Pension</item>
        <item>Personal Savings</item>
        <item>Part-Time Work</item>
        <item>Social Security</item>
        <item>Different</item>
    </string-array>

    <string name="title_activity_history_income">Income History</string>
    <string name="title_activity_backup_and_restore">BackupAndRestore</string>
    <string name="title_activity_show_income">ShowIncome</string>
    <string name="title_activity_voice_recognition">VoiceRecognition</string>
    <string name="please_select">Please Select</string>
    <string name="remove_income">Remove Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="title_activity_create_notification">CreateNotificationActivity</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="statistics_expenses">Expense Statistics</string>
    <string name="statistics_income">Income Statistics</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="load_an_image">Load an Image</string>
    <string name="payment_category">Payment Category</string>
    <string name="short_description">Short Description</string>
    <string name="amount">Amount</string>
    <string name="payee_name">Payee Name</string>
    <string name="money_amount">Money Amount</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title_activity_edit_income">Edit Income</string>
    <string name="title_activity_swipe_tab">Swipe Tab</string>
    <string name="title_activity_swipe_tab2">Swipe Tab 2</string>
    <string name="title_activity_tab_swipe1">TabSwipe1</string>
    <string name="payment_method">Payment Method</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <!-- LOCATION -->
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    <string name="address">Address</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>

</resources>